objects/vlocity_ins__Datastore__c.object
<CustomObject>
    <description>Vlocity Data store to be used as persistent cache.</description>
    <fields>
        <fullName>vlocity_ins__Classname__c</fullName>
        <description>The fully qualified class name of the reader class to use to deserialize the value of this entry.</description>
        <label>Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Key__c</fullName>
        <description>The full key field (up to 255 characters) which fully identifies this entry in the data store.</description>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Identifies a product when this entry is related to a specific product.</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Data Store Item</relationshipLabel>
        <relationshipName>DataStoreItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Value__c</fullName>
        <description>The long text value of the data store entry.</description>
        <label>Value</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Vlocity Data Store</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>VlocityDataStore Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity Data Stores</pluralLabel>
    <recordTypes>
        <fullName>vlocity_ins__CPQAPI</fullName>
        <active>true</active>
        <description>CPQ API partition</description>
        <label>CPQAPI</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_ins__ProductHierarchy</fullName>
        <active>true</active>
        <description>Flatenned Product Hierarchy Items</description>
        <label>Product Hierarchy</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>